# budget-compass-be

./: .gitignore  AGENTS.md  README.md  alembic.ini  budget_compass.db  main.py  pyproject.toml  restart_server.sh  test_budget_flow.py
alembic/: env.py
alembic/versions/: 3f8726df1dd3_create_budget_and_category_tables.py  49d883d1f425_remove_description_from_budget_table.py  6b504b27323e_create_users_table.py
app/: auth.py  budget_items.py  budgets.py  categories.py  database.py  default_data.py  models.py  transactions.py
